accessability improved as has seo

--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="en">
     <head>
       <link rel="stylesheet" href="css/aboutme.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="Description" content="Page about my education, profession and interests and hobbies"> 
       <title>Robbie Colborne</title>
       <a name="top"></a>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <style> 
       @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
       </style>
@@ -14,7 +15,7 @@
       It is locked in place while the user scrolls the page
       This gives the user the ability to navigate the pages in an easy fashion -->
       <div class="topnav">
-          <a class="actve" href="robbiecolborne.html">Home</a>
+          <a href="robbiecolborne.html">Home</a>
           <a href="aboutme.html">About</a>
           <a href="coding.html">Coding</a>
           <a href="blog.html">Blog</a>
@@ -30,7 +31,7 @@
       </div>
       <div>
         <section id="edueducation">
-          <img id="topimage" src="images/education.jpg">
+          <img alt="photo of pencil with text love to learn" id="topimage" src="images/education.jpg">
         </section>
       </div>
   <div class="flextime">
@@ -40,7 +41,7 @@
       </div>
       <div>
         <section class="image">
-          <img id="resize" src="images/videocamera1.jpg">
+          <img alt="photo of camera and crew" id="resize" src="images/videocamera1.jpg">
         </section>
     </div>
   </div>
