--- a/code/blog.html
+++ b/code/blog.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="en">
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="Description" content="Page with various blog posts"> 
       <link rel="stylesheet" href="css/blog.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
@@ -28,7 +29,7 @@
        <div class="flexdiv1">
          <div class="flexdiv2">
           <section>
-          <img class="image" src="images/hamishandi.JPG">
+          <img alt="photo of very attractive men looking at a computer" class="image" src="images/hamishandi.JPG">
           </section>
           </div>
           <div class="step1">
@@ -41,7 +42,7 @@
        <div class="flexdiv3">
          <div class="flexdiv2">
           <section>
-            <img class="image" src="images/harryrobcomputer.png">
+            <img alt="photo of two men studying a piece of pape" class="image" src="images/harryrobcomputer.png">
           </section>
         </div>
           <div class="step1">
@@ -54,7 +55,7 @@
       <div class="flexdiv1">
         <div class="flexdiv2">
         <section>
-          <img class="image" src="images/teachingharry.png">
+          <img alt="two men learning together" class="image" src="images/teachingharry.png">
         </section>
         </div>
         <div class="step1">
@@ -67,7 +68,7 @@
       <div class="flexdiv3">
         <div class="flexdiv2">
         <section>
-            <img class="image" src="images/microwave.JPG">
+            <img alt="a group of people waiting to use a microwave" class="image" src="images/microwave.JPG">
         </section>
         </div>
         <div class="step1">
@@ -80,7 +81,7 @@
       <div class="flexdiv1">
         <div class="flexdiv2">
           <section>
-            <img class="image" src="images/lecture.png">
+            <img alt= "a men giving a lecture to a classroom" class="image" src="images/lecture.png">
           </section>
         </div>
         <div class="step1">
