--- a/code/coding.html
+++ b/code/coding.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <!-- This whole page is targeted specifically to a potential employer -->
     <head>
-        <link rel="stylesheet" href="css/coding.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="Description" content="page with links to projects, current skills, future skills and link to resume"> 
+      <link rel="stylesheet" href="css/coding.css">
       <title>Coding</title>
       <a name="top"></a>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <style> 
       @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
       </style>
@@ -34,12 +35,12 @@
               <section class="section">
                   <h3 class="unique">Terminal Application</h3>
                   <p>We Made a Terminal Application Using Ruby. Check out my GitHub for More Info!</p>
-                  <a href= https://github.com/robbie10001> <img class="github" src="images/github.png"></a>
+                  <a href= https://github.com/robbie10001> <img alt="github logo that is a link to github" class="github" src="images/github.png"></a>
               </section>
               <section class="section">
                   <h3 class="unique">Website</h3>
                   <p>I made a whole Website! Follow the Link!</p>
-                  <a href= https://robbiecolborne.netlify.com> <img class="github" src="images/linkweb.jpg"></a>
+                  <a href= https://robbiecolborne.netlify.com> <img alt= "photo of busy person studying that links to my website" class="github" src="images/linkweb.jpg"></a>
               </section>
             </div>
           </div>
@@ -51,15 +52,15 @@
           <div class="border">
             <section class="left">
                 <p>RUBY</p>
-                <img src="images/ruby.png">
+                <img alt= "ruby logo" src="images/ruby.png">
             </section>
             <section class="center">
                 <p>HTML5</p>
-                <img src="images/html.png">
+                <img alt= "html 5 logo"src="images/html.png">
             </section>
             <section class="right">
                 <p>CSS3</p>
-                <img src="images/css.png">
+                <img alt= "css 3 logo" src="images/css.png">
             </section>
           </div>
           <div>
@@ -79,7 +80,7 @@
               <h3 class="toptext" class="heading">Résumé</h3>
             </section>
             <section class="center" >
-                <a href= "resume/functionalSample.pdf"> <img src="images/resume.png"></a>
+                <a href= "resume/functionalSample.pdf"> <img alt= "link to resume in external pdf" src="images/resume.png"></a>
             </section>
           </div>
         </div>
