--- a/code/index.html
+++ b/code/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="en">
     <!-- Head Section- link to CSS, add title, styles all data besides what renders on page -->
       <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="Description" content="Title Page with links to other pages on website">
         <link rel="stylesheet" href="css/index.css">
         <title>Robbie Colborne</title>
         <a name="top"></a>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <style> 
         @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
         </style>
@@ -31,21 +32,21 @@
                 <section>
                     <p class="texting"> HOME </p>
                     <a href="robbiecolborne.html" target="robbiecolborne.html">
-                    <img src="images/4home.jpg"/>
+                    <img alt= "picutre of a house" src="images/4home.jpg"/>
                     </a>
               </div>
               <div>
                   <section>
                       <p class="texting"> CODING</p>
                       <a href="coding.html" target="coding.html">
-                      <img src="images/codingaway.jpg"/>
+                      <img alt= "a close up of a computer with code" src="images/codingaway.jpg"/>
                       </a>
                 </div>
               <div>
                 <section>
                     <p class="texting">ABOUT ME</p>
                     <a href="aboutme.html" target="aboutme.html">
-                    <img src="images/1aboutme.jpg"/>
+                    <img alt= "a person standing on a mountain" src="images/1aboutme.jpg"/>
                     </a>
                 </section>
               </div>
@@ -53,7 +54,7 @@
                   <section>
                       <p class="texting">BLOG</p>
                       <a href="blog.html" target="blog.html">
-                      <img src="images/2blog.jpg"/>
+                      <img alt= "a person typing at a computer" src="images/2blog.jpg"/>
                       </a>
                   </section> 
               </div>
@@ -61,7 +62,7 @@
                 <section>
                     <p class="texting">CONTACT ME</p>
                     <a href="contactme.html" target="contactme.html">
-                        <img src="images/3contact.jpg"/>
+                        <img alt= "a hand holding out a blank business card" src="images/3contact.jpg"/>
                         </a>
                 </section>
               </div> 
