--- a/code/robbiecolborne.html
+++ b/code/robbiecolborne.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="en">
     <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="Description" content="Home Page with Introduction"> 
       <link rel="stylesheet" href="css/robbiecolborne.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
@@ -12,7 +12,7 @@
     </head>
     <body>
        <div class="topnav">
-          <a class="actve" href="robbiecolborne.html">Home</a>
+          <a href="robbiecolborne.html">Home</a>
           <a href="aboutme.html">About</a>
           <a href="coding.html">Coding</a>
           <a href="blog.html">Blog</a>
@@ -33,7 +33,7 @@
         </div>
         <div>
           <section>
-              <img id="basketball" src="images/titlepage1.jpg" /> 
+              <img alt= "picture of woman embedded within code" id="basketball" src="images/titlepage1.jpg" /> 
           </section>
         </div>
       </div>
@@ -53,7 +53,7 @@
             </div>
             <div class="homepage">
                 <section>
-                    <img id="wedding" src="images/titlepage2.jpg">
+                    <img alt= "picture of a coffee with a laptop in background" id="wedding" src="images/titlepage2.jpg">
                 </section>
             </div>
         </div>
