--- a/code/contactme.html
+++ b/code/contactme.html
@@ -1,8 +1,9 @@
 
 <!DOCTYPE html>
-  <html>
+  <html lang="en">
     <head> 
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="Description" content="Page about my education, profession and interests and hobbies"> 
       <link rel="stylesheet" href="css/contactme.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
@@ -30,19 +31,19 @@
         <div>
             <section >
             <p class="texter">FACEBOOK</p>
-           <a href= https://www.facebook.com/robbie.colborne> <img class="border" src="images/facebook.jpg"> </a>
+           <a href= https://www.facebook.com/robbie.colborne> <img alt="pins with facebook logos" class="border" src="images/facebook.jpg"> </a>
             </section>
         </div>
         <div>
           <section>
             <p class="texter">GITHUB</p>
-            <a href= https://github.com/robbie10001> <img class="border" src="images/github.png"></a>
+            <a href= https://github.com/robbie10001> <img alt="image of github logo" class="border" src="images/github.png"></a>
           </section>
         </div>
         <div>
           <section class="relative">
             <p class="texter">PHONE</p>
-            <img class="border" src="images/phone.jpg">
+            <img alt= "photo of phone that when scrolled over reveals contact number 0449717863" class="border" src="images/phone.jpg">
             <div class="phone">
               0449717863
             </div>
@@ -51,7 +52,7 @@
         <div>
           <section>
             <p class="texter">EMAIL</p>
-            <a href= "mailto:robbie_c1000@hotmail.com"> <img class="border" src="images/email.jpg"> </a>
+            <a href= "mailto:robbie_c1000@hotmail.com"> <img alt="image of an open computer screen showing a gmail account" class="border" src="images/email.jpg"> </a>
           </section>
         </div>
       </div>
