--- a/RobbieColborne_T1A3/src/blog.html
+++ b/RobbieColborne_T1A3/src/blog.html
@@ -3,7 +3,7 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="Description" content="Page with various blog posts"> 
-      <link rel="stylesheet" href="css/blog.css">
+      <link integrity="TYynAq2ExVh1ohb6ZxhmY3M+jbsm/xX1YWGtOE/W4rXjVkIlPjNrA1R0DgsyR08xelLMN0qSF13P1sioHAZAGQ" rel="stylesheet" href="css/blog.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
       <style>
