--- a/RobbieColborne_T1A3/src/coding.html
+++ b/RobbieColborne_T1A3/src/coding.html
@@ -4,7 +4,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Description" content="page with links to projects, current skills, future skills and link to resume"> 
-      <link rel="stylesheet" href="css/coding.css">
+      <link integrity="imWtMylgEX4Q1wD6Nv/7PWkHC272nUgfOtkZQwrVkltnBfe2e8YdgPRbrYkOEHZr0Aem2FxwbHyevCV+F3DsXQ" rel="stylesheet" href="css/coding.css">
       <title>Coding</title>
       <a name="top"></a>
       <style> 
