--- a/RobbieColborne_T1A3/src/index.html
+++ b/RobbieColborne_T1A3/src/index.html
@@ -4,7 +4,7 @@
       <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Description" content="Title Page with links to other pages on website">
-        <link rel="stylesheet" href="css/index.css">
+        <link integrity="n7TJSGQohTlowB1DnF9j5UMl5pd0S+P2qFPIBqXt1m5FO5gae77K5kGFZJ7mOn7EXTVbEv/GP6MS0wMJtEVmyA" rel="stylesheet" href="css/index.css">
         <title>Robbie Colborne</title>
         <a name="top"></a>
         <style> 
