--- a/RobbieColborne_T1A3/src/robbiecolborne.html
+++ b/RobbieColborne_T1A3/src/robbiecolborne.html
@@ -3,7 +3,7 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="Description" content="Home Page with Introduction"> 
-      <link rel="stylesheet" href="css/robbiecolborne.css">
+      <link integrity="FvmKDWcm7rOa0/vIMmTx4xh+zaCxLNoftmhTF0Gq5cv2s+0f0r2BWETr43Cy1Rg60y+UobXxXj2IxfHjXL9y3g" rel="stylesheet" href="css/robbiecolborne.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
       <style>
